--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="theme-color" content="#00ff88" />
+  <meta name="description" content="Turn-based cellular tactics puzzle game — contain, eliminate, and outsmart pathogens!" />
   <title>Bio Defence</title>
+  <!-- PWA manifest -->
+  <link rel="manifest" href="/manifest.json" />
+  <!-- Icons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32.png" />
+  <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
@@ -24,5 +33,16 @@
 <body>
   <div id="game-container"></div>
   <script type="module" src="/src/main.ts"></script>
+  <script>
+    // Register PWA service worker
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        navigator.serviceWorker.register("/sw.js").then(
+          (reg) => console.log("SW registered:", reg.scope),
+          (err) => console.warn("SW registration failed:", err)
+        );
+      });
+    }
+  </script>
 </body>
 </html>
